# gabber

./: AUTHORS  ChangeLog  HACKING  HACKING.ideas  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  autogen.sh  configure.ac  doxygen.cfg.in  gabber.desktop.in  gabber.schemas.in
docs/: MM-UML.dia  MM-flow.dia  NewBlankMsgView.dia
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  it.po  pt_BR.po
python/: BaseGabberWindow.py  ChangeLog  ConfigWrapper.py  Environment.py  GabberApp.py  GabberWin.py  JabberConnection.py  LoginDlg.py  PluginManager.py  Popups.py  PrettyJID.py  RosterModel.py  RosterView.py  Singleton.py  TCPTransmitter.py  main.py
python/Plugins/: ChatView.py  ChatViewManager.py  PlainTextView.py  __init__.py  chat.py
src/: AddContactDlg.cc  AddContactDlg.hh  AutoAway.cc  AutoAway.hh  AvatarManager.cc  AvatarManager.hh  BaseGabberWindow.cc  BaseGabberWindow.hh  BaseModule.hh  ConfigPaths.hh  ConfigWrapper.hh  Configurator.cc  Configurator.hh  ContactInfo.cc  ContactInfo.hh  Environment.hh  Event.hh  FTProfile.cc  FTProfile.hh  FeatureNegotiation.hh  FileTransferDlg.cc  FileTransferDlg.hh  FileTransferManager.cc  FileTransferManager.hh  FileTransferRecvDlg.cc  FileTransferRecvDlg.hh  FileTransferSendDlg.cc  FileTransferSendDlg.hh  GabberApp.cc  GabberApp.hh  GabberDialog.cc  GabberDialog.hh  GabberUtility.cc  GabberUtility.hh  GabberWidgets.cc  GabberWidgets.hh  GabberWin.cc  GabberWin.hh  GroupsEditor.cc  GroupsEditor.hh  (+67 more)
src/linux/: GConfConfigurator.cc  GConfConfigurator.hh  Makefile.am  PlatformFuncs.cc  PlatformFuncs.hh  StatusIcon.cc  StatusIcon.hh
src/modules/: ChatView.cc  ChatView.hh  ChatViewManager.cc  ChatViewManager.hh  GCJoinDlg.cc  GCJoinDlg.hh  GCView.cc  GCView.hh  GCViewManager.cc  GCViewManager.hh  Makefile.am  RawInputDlg.cc  RawInputDlg.hh  RawViewManager.cc  RawViewManager.hh  StandaloneSendDlg.cc  StandaloneSendDlg.hh  StandaloneView.cc  StandaloneView.hh  StandaloneViewManager.cc  StandaloneViewManager.hh
src/osx/: GConfConfigurator.hh  Makefile.am  PlatformFuncs.cc  PlatformFuncs.hh  Startup.cc  StatusIcon.cc  StatusIcon.hh
src/win32/: Makefile.am  PlatformFuncs.cc  PlatformFuncs.hh  StatusIcon.cc  StatusIcon.hh  Win32Configurator.cc  Win32Configurator.hh
ui/: AddContact_dlg.glade  EditGroups_dlg.glade  FTRecv_dlg.glade  FTSend_dlg.glade  FTTransfer_dlg.glade  GCJoin_dlg.glade  GChat_win.glade  Gabber_win.glade  LogViewer_win.glade  Login_dlg.glade  Makefile.am  MyInfo_dlg.glade  OOOChat_win.glade  Prefs_win.glade  RawInput_dlg.glade  RegisterGateway_dlg.glade  Resources_dlg.glade  Roster_Action_menu.glade  Roster_menu_user.glade  S10nRequest_dlg.glade  StandaloneMsgRecv_dlg.glade  StandaloneMsgSend_dlg.glade  Status_dlg.glade  ViewInfo_dlg.glade
