# Icon
icondir			= $(datadir)/pixmaps
icon_DATA		= gabber.png

# Pixmaps
pixmapdir		= $(datadir)/pixmaps/$(PACKAGE)
pixmap_DATA		= \
	away.png	  \
	chat.png	  \
	dnd.png		  \
	offline.png	  \
	online.png        \
	xa.png		  \
	message-chat.png  \
        message-standalone.png \
	presence-s10n.png

EXTRA_DIST		= $(icon_DATA) \
	$(pixmap_DATA)
