
glade_files = \
    AddContact_dlg.glade \
    EditGroups_dlg.glade \
    FTRecv_dlg.glade \
    FTSend_dlg.glade \
    FTTransfer_dlg.glade \
    Gabber_win.glade \
    GChat_win.glade \
    GCJoin_dlg.glade \
    Login_dlg.glade \
    LogViewer_win.glade \
    OOOChat_win.glade \
    MyInfo_dlg.glade \
    Prefs_win.glade \
    RawInput_dlg.glade \
    RegisterGateway_dlg.glade \
    Resources_dlg.glade \
    Roster_Action_menu.glade \
    Roster_menu_user.glade \
    S10nRequest_dlg.glade \
    StandaloneMsgRecv_dlg.glade \
    StandaloneMsgSend_dlg.glade \
    Status_dlg.glade \
    ViewInfo_dlg.glade

pkgdata_DATA = $(glade_files)

EXTRA_DIST = $(glade_files)
